tests/positive/IdInType.juvix
module IdInType;

type Unit := unit : Unit;

open Unit using {unit} public;

id : {a : Type} -> a -> a
  | a := a;

f : id Unit -> Unit
  | _ := unit;
