tests/negative/AsPatternAlias.juvix
module AsPatternAlias;

f : Type -> Type
| a@b := b;

end;
